# vworlds-revival-pub

./: .gitignore  CMakeLists.txt  ORIGINAL_README.txt  README.md  license.txt  makefile  version.h
.github/workflows/: build-release.yml
chm_extract/: api graphics.htm  sdkintro.htm  vworlds.hhc
chm_extract/API Reference/: API Overview.htm
chm_extract/GetHelp/: morehelp.htm  print.htm
chm_extract/UIRef/: UIRefst.htm  movekeys.htm
compat/: d3drm.h  d3drmdef.h  d3drmmath.h  d3drmobj.h  d3drmwin.h  d3dtypes_compat.h  ddraw.h
content/: .gitignore  _exclude.txt
d2d/: d2d.cpp  d2d.def  d2d.rc  d2d.rc2  d2d60.dep  d2d60.dsp  d2d60.mak  d2dbase.h  d2dprv.h  d2dprv_i.c  d2drm.cpp  d2drm.h  d2drmanm.cpp  d2drmanm.h  d2drmarr.cpp  d2drmarr.h  d2drmdev.cpp  d2drmdev.h  d2drmfrm.cpp  d2drmfrm.h  d2drmhsp.cpp  d2drmhsp.h  d2drmimg.cpp  d2drmimg.h  d2drmobj.cpp  d2drmobj.h  d2drmpka.cpp  d2drmpka.h  d2drmvp.cpp  d2drmvp.h  d2dtrans.cpp  d2dtrans.h  displist.cpp  displist.h  resource.h  stdafx.cpp  stdafx.h  version.h
d2d/jpeglib/: all.h  (+19 more)
d3drm_probe/: CMakeLists.txt  cube_main.cpp  main.cpp  vwmm_com_test.cpp  vwmm_probe.cpp  vwmm_probe2.cpp  vwserver_probe.cpp
docs/: VWstyle.css  architecture.html  building.html  changelog.html  documentation.html  faq.html  gallery.html  index.html  license.html
fastcomm/: commlayr.cpp  commlayr.h  fastcono.cpp  fastmsgo.cpp  fastobj.cpp  fastobj.h  stdafx.h
renderhost/: renderhost.cpp  spuck.cpp
scripts/: build.bat  build_target.bat  configure.bat  create_allworlds.vbs  create_desktopworld.vbs  create_world.vbs  create_world_headless.scr  create_world_with_room.scr  debug_renderhost.bat  debug_sengine.bat  debug_server.bat  fix_content_path.scr  fix_paths.bat  kill_all.bat  kill_server.bat  launch_all_clients.bat  launch_authoring.bat  launch_desktopworld.bat  launch_drudge_avatar.bat  launch_editor.bat  launch_editor_persist.bat  launch_mud.bat  launch_multiuser.bat  launch_render_test.bat  launch_view.bat  launch_webclient.bat  launch_world.bat  register_all.bat  restart_server.bat  run_script.bat  run_server.bat  run_vbs.bat  setup_registry.bat  setup_world.scr  spuck.vbs  test_connect.scr  test_connect2.scr  test_connect3.scr  test_create.scr  test_create2.scr  (+8 more)
sengine/: childfrm.cpp  childfrm.h  coleauto.cpp  coleauto.h  dbgview.cpp  dbgview.h  getmedlg.cpp  getmedlg.h  gotodlg.cpp  gotodlg.h  guids.cpp  mainfrm.cpp  mainfrm.h  multinfo.h  ocxview.cpp  ocxview.h  oleid.cpp  oleid.h  readme.txt  resource.h  sengdoc.cpp  sengdoc.h  sengin60.dep  sengin60.dsp  sengin60.mak  sengine.cpp  sengine.h  sengine.odl  sengine.rc  sengine.reg  sengview.cpp  sengview.h  stdafx.cpp  stdafx.h
serverv2/: childfrm.cpp  childfrm.h  dlgmaxlimit.cpp  dlgmaxlimit.h  dsurl.cpp  dsurl.h  globdoc.cpp  globdoc.h  globedvw.cpp  globedvw.h  globfrm.cpp  globfrm.h  infourl.cpp  infourl.h  mainfrm.cpp  mainfrm.h  optionsdlg.cpp  optionsdlg.h  prgdlg.cpp  prgdlg.h  resource.h  savedlg.cpp  savedlg.h  servdoc.cpp  servdoc.h  serverv2.cpp  serverv2.h  serverv2.rc  servsink.cpp  servsink.h  servview.cpp  servview.h  srvv260.dep  srvv260.dsp  srvv260.mak  stdafx.cpp  stdafx.h
spritemn/: spritemo.cpp  spritemo.h
vwadmin/: vwadmobj.cpp  vwadmobj.h
vwclient/: vwcli_ps.def  vwclient.cpp  vwclient.def  vwcliobj.cpp  vwcliobj.h  vwcliocx.cpp  vwcliocx.h
vwcomm/: commcono.cpp  commfunc.cpp  commmsgo.cpp  commobj.cpp  commobj.h  tinfo.cpp
vwcommon/: 3dstod3d.h  3dstod3d.idl  3dstod3d_i.c  authntic.h  authntic.idl  authntic_i.c  avprof.h  avprof.idl  avprof_i.c  bndytool.h  bndytool.idl  bndytool_i.c  cathelp.cpp  cathelp.h  cellprop.h  cellprop.idl  cellprop_i.c  cmddel.cpp  cmddel.h  compmgr.h  convgeer.h  convgeom.h  convgeom.idl  convgeom_i.c  d2d.h  d2d.idl  d2d_i.c  dirserv.h  dirserv.idl  dirserv_i.c  dlldata.c  geomtool.h  geomtool.idl  geomtool_i.c  global.h  graphtls.h  helpers.h  htmlhelp.h  inetfile.h  inetfile.idl  (+154 more)
vwgcache/: readwdb.cpp  readwdb.h  vwgcache.cpp  vwgcache.def  vwgcacho.cpp  vwgcacho.h
vwmm/: conv3ds.rgs  dlldatax.c  resource.h  stdafx.cpp  stdafx.h  vwmm.cpp  vwmm.def  vwmm.h  vwmm.idl  vwmm.rc  vwmm.rc2  vwmm60.dep  vwmm60.dsp  vwmm60.mak  vwmm_dlldata.c  vwmm_i.c  vwmmex.rgs
vwobject/: collenum.cpp  collenum.h  comobj.cpp  comobj.h  connlist.cpp  connlist.h  marshbuf.cpp  marshbuf.h  methdobj.cpp  methdobj.h  plisthlp.cpp  plistobj.cpp  plistobj.h  pmaphlp.cpp  pmapobj.cpp  pmapobj.h  propsecu.cpp  propsecu.h  scrptobj.cpp  scrptobj.h  thinghlp.cpp  thingobj.cpp  thingobj.h  vwobject.cpp  vwobject.def  worldevt.cpp  worldfmt.cpp  worldhlp.cpp  worldmar.cpp  worldobj.cpp  worldobj.h
vwodb/: vwodb.cpp  vwodb.def  vwodbobj.cpp  vwodbobj.h  vwodbps.def
vwprops/: resource.h  stdafx.cpp  stdafx.h  vwprops.cpp  vwprops.def
vwrender/: vwrend2d.cpp  vwrend2d.h  vwrend3d.cpp  vwrend3d.h  vwrender.cpp  vwrender.def  vwrendrt.cpp  vwrendrt.h
vwserver/: commsite.cpp  commsite.h  connlist.cpp  connlist.h  connserv.cpp  connserv.h  queue.cpp  queue.h  vwserve.cpp  vwserve.h  vwserver.cpp  vwserver.def  wldinfo.cpp  wldinfo.h  wldlist.cpp  wldlist.h
vwstudio/: copytool.rgs  ctrlmgr.rgs  cuttool.rgs  delvert.rgs  delxslct.rgs  dlldatax.c  fileactl.rgs  geomundo.rgs  insvert.rgs  navbound.rgs  polytool.rgs  resource.h  rotat2d.rgs  rottool.rgs  rwhelper.rgs  scale2d.rgs  scaletl.rgs  select.rgs  stdafx.cpp  stdafx.h  trans2d.rgs  undoitem.rgs  undostak.rgs  version.h  vwerrtl.rgs  vwstud60.dep  vwstud60.dsp  vwstud60.mak  vwstudio.cpp  vwstudio.def  vwstudio.h  vwstudio.idl  vwstudio.rc  vwstudio.rc2  vwstudio_dlldata.c  vwstudio_i.c  vwstuex.rgs  vwtrans.rgs  wwhelper.rgs  zoomtool.rgs
vwsystem/: artifact.rgs  authcate.rgs  authshun.rgs  avatar.rgs  avprof.rgs  dlldatax.c  dlldatax.h  dlthread.rgs  dserv.rgs  host.rgs  iwportal.rgs  portal.rgs  resource.h  room.rgs  statemch.rgs  stdafx.cpp  stdafx.h  vwcliocx.rgs  vwsys_dlldata.c  vwsysex.rgs  vwsyst60.dep  vwsyst60.dsp  vwsyst60.mak  vwsystem.cpp  vwsystem.def  vwsystem.h  vwsystem.idl  vwsystem.rc  vwsystem.rc2  vwsystem_i.c  vwthing.rgs  webpage.rgs
webclient/: webclient.cpp
(+2219 files in other folders)
